Added the source of this work.

--- a/keras_simple_mnist_cnn.ipynb
+++ b/keras_simple_mnist_cnn.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "# create a CNN model using 3 conv nets. Use of 32/64/64 filters\n",
+	"This code is derived from Deep Learning with Python by Francois Chollet." 
     "\n",
     "import keras\n",
     "from keras import layers\n",
