Added the source information

--- a/keras_simple_mnist_cnn.ipynb
+++ b/keras_simple_mnist_cnn.ipynb
@@ -18,7 +18,7 @@
    ],
    "source": [
     "# create a CNN model using 3 conv nets. Use of 32/64/64 filters\n",
-    "# This was work is derived from Deep_Learning with Python by Francios Chollet. \n",
+    "# This work is derived from Deep_Learning with Python by Francios Chollet. \n",
     "\n",
     "import keras\n",
     "from keras import layers\n",
